test/bad/generics/print04.px

func f<A,B>(x: A, f: A->B): B def
    return f(x)

print f(write, _)
